added more features